# grind

./: .env.example  .flake8  pyproject.toml
.github/workflows/: myproject_dev.yml
apps/: router.py
config/: settings.py  urls.py
